Fixes to CSS. #kwitNumber was overlapped by .container

--- a/project/frontend/app/styles/main.css
+++ b/project/frontend/app/styles/main.css
@@ -17,6 +17,8 @@ time, mark, audio, video {
 }
 
 body {
+  width: 100%;
+  height: 100vh;
   background: #DACEB4;
   font-size: 13px;
   color: #333;
@@ -30,8 +32,9 @@ input:focus{
 .container {
   width: 1170px; /* default width to support most popular tablets and laptops*/
   margin: 0 auto;
-  height: 100vh;
+  display: block;
   position: relative;
+  height: 500px;
 }
 
 #kwit, #kwitNumber, #headText, #logo {
@@ -41,12 +44,14 @@ input:focus{
 }
 
 #header {
+  min-height: 50px;
+  max-height: 200px;
   background: #B2A176;
   width: 100%;
   display: block;
   margin-bottom: 5px;
-  position: relative;
-  float: left;
+  position:relative;
+  float:left;
 }
 
 #kwit {
@@ -66,14 +71,14 @@ input:focus{
   padding-top: 5px;
 }
 
-#kwitNumber > input {
-  height: 30px;
+#kwitNumber-input {
   background: #fffaf7;
   border-radius: 10px;
   font-size: 1.8em;
   color: #8B7741;
   padding: 5px 0 5px 10px;
   width: 200px;
+  z-index: 9999999;
 }
 
 #headText a {
@@ -206,6 +211,7 @@ input:focus{
 }
 
 .row {
+  position:relative;
   display: block;
   width: 100%;
   min-height: 20px;
@@ -221,7 +227,7 @@ input {
   outline: none;
 }
 
-/*Turns off incriment button in all number fields*/
+/*Turns off increment button in all number fields*/
 input[type=number]::-webkit-inner-spin-button,
 input[type=date]::-webkit-inner-spin-button{
   -webkit-appearance: none;
@@ -489,7 +495,7 @@ p.stempel-text{
   width: 25px;
   height: 25px;
   position: absolute;
-  bottom: 6px;
+  bottom: 7px;
   right: 5px;
   background: lightgray;
   border: 1px solid white;
@@ -499,20 +505,23 @@ p.stempel-text{
   background-color: #ff9900;
 }
 #feedback {
-  height: 40px;
-  width:  100%;
+  height: 45px;
+  width:  99.2%;
   background: #B2A176;
   border: 2px solid white;
   border-radius: 5px;
   display: block;
-  position: absolute;
-  bottom: 2px;
+  float:left;
+  position:relative;
+  margin: 30px 2px;
+  box-sizing: border-box;
+
 
 }
 .feedback-header, .feedback-total-amount, .feedback-total-forms {
   color: white;
   font-size: 1.5em;
-  padding: 9px 0 0 10px;
+  padding: 10px;
   display: inline-block;
 
 }
